--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
+<html>
 
+<head>
+    <title>
+        Validation Form
+    </title>
+    <script src="validation1.js"></script>
+</head>
+
+<body>
+    <h1>
+        Validation Form
+    </h1>
+
+    <form id="validationForm" action="">
+        <fieldset>
+            <p id="firstName">
+                <label for="firstName">First Name</label>
+                <input id="firstName" name="firstName" type="text" />
+
+            </p>
+            <p id="lastName">
+                <label for="lastName">Last Name</label>
+                <input id="lastName" name="lastName" type="text" />
+
+            </p>
+
+            <p id="gender">
+                <label for="gender">Gender</label>
+                <select id="gender" name="gender">
+                    <option>Select Your Gender:</option>
+                    <option>Male</option>
+                    <option>Female</option>
+                    <option>Other</option>
+                </select>
+            </p>
+
+            <p id="state">
+                <label for="state">State</label>
+                <select id="state" name="state">
+                    <option>Select Your State:</option>
+                    <option>California</option>
+                    <option>Florida</option>
+                    <option>New York</option>
+                    <option>Texas</option>
+                    <option>Hawaii</option>
+                    <option>Washington</option>
+                    <option>Colorado</option>
+                    <option>Virginia</option>
+                    <option>Iowa</option>
+                    <option>Arizona</option>
+                </select>
+            </p>
+
+            <input onCLick="validate()" type="button" id="continue" value="Continue" />
+        </fieldset>
+    </form>
+</body>
+
+</html>
