--- a/index.html
+++ b/index.html
@@ -35,17 +35,19 @@
 
             document.getElementById("output").innerHTML = "Hi<br>";
             document.getElementById("output").innerHTML += "<br>";
-            document.getElementById("output").innerHTML += "My name is Sam, I am " + student + "\'s math teacher. <br>";
-            document.getElementById("output").innerHTML += "I have enjoyed having " + student + " in my class.<br>"
+            document.getElementById("output").innerHTML += "My name is Mary, I am " + student + "\'s math teacher. <br>";
+            document.getElementById("output").innerHTML += "I have enjoyed having " + student + " in my class this trimester.<br>"
             document.getElementById("output").innerHTML += comment + "<br>";
             document.getElementById("output").innerHTML += "<br>";
             document.getElementById("output").innerHTML += "We are current four weeks away from the end of the trimester.<br>";
-            document.getElementById("output").innerHTML += student + "is currently missing the following assignments: " + missingAssignments + "<br>";
-            document.getElementById("output").innerHTML += "My grading policy allows " + student + " to earn full points back on assignments and half points back on tests.<br>";
-            document.getElementById("output").innerHTML += "I have enjoyed having " + student + " in my class this trimester.<br>";
-            document.getElementById("output").innerHTML += "My number is 1234567890, feel free to reach out with any questions.<br>";
+            document.getElementById("output").innerHTML += student + " is currently missing the following assignments: " + missingAssignments + "<br>";
             document.getElementById("output").innerHTML += "<br>";
-            document.getElementById("output").innerHTML += "Sam";
+            document.getElementById("output").innerHTML += "My grading policy allows " + student + " to earn full points back on assignments and half points back on quizzes.<br>";
+            document.getElementById("output").innerHTML += "<br>";
+            document.getElementById("output").innerHTML += "I have enjoyed having " + student + " in my class this trimester.<br>";
+            document.getElementById("output").innerHTML += "My number is (319) 214-0073, feel free to reach out with any questions.<br>";
+            document.getElementById("output").innerHTML += "<br>";
+            document.getElementById("output").innerHTML += "Ms. Anton";
         }
     </script>
 
