--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             document.getElementById("output").innerHTML += "I have enjoyed having " + student + " in my class this trimester.<br>"
             document.getElementById("output").innerHTML += comment + "<br>";
             document.getElementById("output").innerHTML += "<br>";
-            document.getElementById("output").innerHTML += "We are current four weeks away from the end of the trimester.<br>";
+            document.getElementById("output").innerHTML += "We are currently four weeks away from the end of the trimester.<br>";
             document.getElementById("output").innerHTML += student + " is currently missing the following assignments: " + missingAssignments + "<br>";
             document.getElementById("output").innerHTML += "<br>";
             document.getElementById("output").innerHTML += "My grading policy allows " + student + " to earn full points back on assignments and half points back on quizzes.<br>";
