update length of text box

--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
 </head>
 
 <body>
-    <h1>
+    <h2>
         Email Generator
-    </h1>
+    </h2>
 
     <p>
-        <label>Student Name</label>
-        <input id="student" type="text" />
+        <label>Student</label>
+        <input id="student" type="text" size="80"/>
 
     </p>
     <p>
-        <label>Nice niceComment</label>
-        <input id="niceniceComment" type="text" />
+        <label>Nice Comment</label>
+        <input id="niceniceComment" type="text" size="80"/>
     </p>
     <p>
-        <label>Missing Assignments (separate with commas)</label>
-        <input id="missingAssignments" type="text" />
+        <label>Missing Assignments</label>
+        <input id="missingAssignments" type="text" size="80"/>
     </p>
     <p>
         <label>Math Class</label>
-        <input id="mathClass" type="text" />
+        <input id="mathClass" type="text" size="80"/>
     </p>
     <button onclick="generate()">Generate Email</button>
 
@@ -58,9 +58,9 @@
         }
     </script>
 
-    <h1>
+    <h2>
         Output
-    </h1>
+    </h2>
 
     <p id="output"></p>
 </body>
