--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </p>
     <p>
         <label>Nice Comment</label>
-        <input id="niceniceComment" type="text" size="80"/>
+        <input id="niceComment" type="text" size="80"/>
     </p>
     <p>
         <label>Missing Assignments</label>
@@ -33,7 +33,7 @@
     <script>
         function generate() {
             var student = document.getElementById("student").value;
-            var niceComment = document.getElementById("niceniceComment").value;
+            var niceComment = document.getElementById("niceComment").value;
             var mathClass = document.getElementById("mathClass").value;
             var missingAssignments = document.getElementById("missingAssignments").value;
 
