--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="styles.css">
+    <script src="generate.js"></script>
     <title>
         Email Generator
     </title>
@@ -16,7 +18,7 @@
             <label>Student</label>
             <input id="student" type="text" size="80"/>
         </li>
-        <li>
+        <li> 
             <label>Nice Comment</label>
             <input id="niceComment" type="text" size="80"/>
         </li>
