add padding to ul

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         Email Generator
     </h2>
 
-    <ul>
+    <ul class="info">
         <li>
             <label>Student</label>
             <input id="student" type="text" size="80"/>
