--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
         Email Generator
     </h2>
 
-    <ul class="info">
+    <ul>
         <li>
             <label>Student</label>
-            <input id="student" type="text" size="80"/>
+            <input id="student" type="text"/>
         </li>
         <li> 
             <label>Nice Comment</label>
-            <input id="niceComment" type="text" size="80"/>
+            <input id="niceComment" type="text"/>
         </li>
         <li>
             <label>Missing Assignments</label>
-            <input id="missingAssignments" type="text" size="80"/>
+            <input id="missingAssignments" type="text"/>
         </li>
         <li>
             <label>Math Class</label>
-            <input id="mathClass" type="text" size="80"/>
+            <input id="mathClass" type="text"/>
         </li>
     </ul>
     
