--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <ul>
         <li>
             <label>Student</label>
-            <input id="student" type="text"/>
+            <input id="student" type="text" placeholder="student"/>
         </li>
         <li> 
             <label>Nice Comment</label>
-            <input id="niceComment" type="text"/>
+            <input id="niceComment" type="text" placeholder="comment"/>
         </li>
         <li>
             <label>Missing Assignments</label>
-            <input id="missingAssignments" type="text"/>
+            <input id="missingAssignments" type="text" placeholder="missing assignments"/>
         </li>
         <li>
             <label>Math Class</label>
-            <input id="mathClass" type="text"/>
+            <input id="mathClass" type="text" placeholder="class"/>
         </li>
     </ul>
     
