add class for output

--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
     </ul>
      
     <button onclick="generate()">Generate Email</button>
- 
+    <div class="container"> 
     <h2>
         Output
     </h2>
  
     <p id="output"></p>
+    </div>
 </body>
  
 </html>
