--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div class="containerTop">
     <h2>
         Email Generator
     </h2>
@@ -31,9 +32,11 @@
             <input id="mathClass" type="text" placeholder="class"/>
         </li>
     </ul>
-     
+    </div>
+    <div>
     <button onclick="generate()">Generate Email</button>
-    <div class="container"> 
+    </div> 
+    <div class="containerBot"> 
     <h2>
         Output
     </h2>
