update break variable

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
- 
+
+<meta charset="UTF-8">
+
 <head>
     <link rel="stylesheet" href="styles.css">
     <script src="generate.js"></script>
@@ -10,39 +12,39 @@
 
 <body>
     <div class="containerTop">
-    <h2>
-        Email Generator
-    </h2>
+        <h2>
+            Email Generator
+        </h2>
 
-    <ul>
-        <li>
-            <label>Student</label>
-            <input id="student" type="text" placeholder="student"/>
-        </li>
-        <li> 
-            <label>Nice Comment</label>
-            <input id="niceComment" type="text" placeholder="comment"/>
-        </li>
-        <li>
-            <label>Missing Assignments</label>
-            <input id="missingAssignments" type="text" placeholder="missing assignments"/>
-        </li>
-        <li>
-            <label>Math Class</label>
-            <input id="mathClass" type="text" placeholder="class"/>
-        </li>
-    </ul>
+        <ul>
+            <li>
+                <label>Student</label>
+                <input id="student" type="text" placeholder="student" />
+            </li>
+            <li>
+                <label>Nice Comment</label>
+                <input id="niceComment" type="text" placeholder="comment" />
+            </li>
+            <li>
+                <label>Missing Assignments</label>
+                <input id="missingAssignments" type="text" placeholder="missing assignments" />
+            </li>
+            <li>
+                <label>Math Class</label>
+                <input id="mathClass" type="text" placeholder="class" />
+            </li>
+        </ul>
     </div>
     <div>
-    <button onclick="generate()">Generate Email</button>
-    </div> 
-    <div class="containerBot"> 
-    <h2>
-        Output
-    </h2>
- 
-    <p id="output"></p>
+        <button onclick="generate()">Generate Email</button>
+    </div>
+    <div class="containerBot">
+        <h2>
+            Output
+        </h2>
+
+        <p id="output"></p>
     </div>
 </body>
- 
+
 </html>
